EB-2003-07-01-0: Bugfix:    SGEEE: qmaster crashed on qdel of tightly
                            integrated parallel job
                 Bugtraq:   4883714
                 Issue:     572
                 Review:    JG, (AS)
                 Changed:   sge_qmaster

CR-2003-06-30-1: Testsuite: qevent -ts option was not working for sge system
                 Changed:   qevent

AH-2003-06-30-0: Bugfix:    Fixed bug "sge_schedd dies...".
                 Issue:     545
                 Bugtraq:   4859658
                 Review:    EB

CR-2003-06-30-0: Testsuite: fixed aftereffect in test for IZ 509. Enhancments
                            in submit_job() procedure caused unexpected error
                            when testing -t option with invalid range 
                            specification.

AD-2003-06-25-1: Bugfix:    spool_flatfile_open_file(): Changed size
                            of buffer for tmp filename from L_tmpnam
                            to SGE_PATH_MAX.
                 Changed:   sge_spooling_flatfile.c

AD-2003-06-25-0: Bugfix:    New implementaion of 'sge_tmpnam()'
                            'sge_tmpnam' internally used tmpnam. On glibc
                            based systems this provoked a warning.
                 Issue:     289
                 Review:    EB
                 Changed:   sge_tmpnam.[ch] (new), sge_io.[ch]

CR-2003-06-25-0: Bugfix:    disabled infotext error output if SGE_ROOT is
                            not set.
                 Review:    AS
                 Bugtraq:   4885719
                 Issue:     577
                 Changed:   utilib (all binaries)

CR-2003-06-18-1: Testsuite: modified drmaa test
                            - disabled test for GE versions < 6.0

CR-2003-06-18-0: Testsuite: added new testsuite version names:
                            - SGE_5.3prep4
                            - SGEEE_5.3prep4
                            - SGE_5.3p4
                            - SGEEE_5.3p4
